feat: add Google Analytics 4 (G-F3GLBLC9JW) to all pages

--- a/clean-screenshot-layout.html
+++ b/clean-screenshot-layout.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F3GLBLC9JW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-F3GLBLC9JW', { send_page_view: true });
+</script>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Make a Clean Screenshot Layout – Organized Image Arrangements</title>
+    <title>Make a Clean Screenshot Layout 鈥?Organized Image Arrangements</title>
     <meta name="description" content="Make clean screenshot layouts with consistent spacing and alignment. Arrange multiple screenshots into organized compositions without design skills.">
     <link rel="canonical" href="https://www.pictrikit.com/clean-screenshot-layout.html">
     
@@ -53,7 +61,7 @@
         .content h2 { font-size: 1.375rem; font-weight: 600; color: #111827; margin: 2.5rem 0 1rem; }
         .content ul { margin: 1rem 0 1.5rem 0; padding-left: 0; list-style: none; }
         .content ul li { padding: 0.5rem 0; padding-left: 1.5rem; position: relative; color: #475569; }
-        .content ul li::before { content: "–"; position: absolute; left: 0; color: #007AFF; }
+        .content ul li::before { content: "鈥?; position: absolute; left: 0; color: #007AFF; }
         .content ol { margin: 1rem 0 1.5rem 1.25rem; }
         .content ol li { padding: 0.375rem 0; color: #475569; }
         .example-image { margin: 2rem 0; border-radius: 0.75rem; overflow: hidden; box-shadow: 0 4px 20px rgba(0,0,0,0.08); border: 1px solid #e2e8f0; }
@@ -111,7 +119,7 @@
 
     <div class="content">
         <div class="container">
-            <p>A clean layout makes screenshots easier to understand. When images are properly spaced, aligned, and organized, the viewer focuses on the content instead of being distracted by messy arrangement. Clean doesn't mean fancy—it means intentional.</p>
+            <p>A clean layout makes screenshots easier to understand. When images are properly spaced, aligned, and organized, the viewer focuses on the content instead of being distracted by messy arrangement. Clean doesn't mean fancy鈥攊t means intentional.</p>
 
             <div class="example-image">
                 <div class="example-placeholder">
@@ -126,7 +134,7 @@
             <p>When you drag screenshots into a document or slide, you're eyeballing everything. Is this gap the same as that one? Are these two images actually the same width? It's hard to tell, and small inconsistencies add up. The result looks "off" even if you can't pinpoint why.</p>
 
             <h2>Let the layout do the work</h2>
-            <p>A structured layout handles spacing and alignment automatically. You choose how you want your screenshots arranged—side by side, in a grid, or stacked—and the layout ensures everything lines up. The spacing is consistent, the sizing is balanced, and the result looks clean without any manual tweaking.</p>
+            <p>A structured layout handles spacing and alignment automatically. You choose how you want your screenshots arranged鈥攕ide by side, in a grid, or stacked鈥攁nd the layout ensures everything lines up. The spacing is consistent, the sizing is balanced, and the result looks clean without any manual tweaking.</p>
 
             <h2>What you can do</h2>
             <p>With clean layout options, you can:</p>
@@ -153,7 +161,7 @@
                 <li>Export a clean, organized image</li>
             </ol>
 
-            <p>The result is a screenshot layout that looks like you spent time on it—even though you didn't. Clean, balanced, and ready to use.</p>
+            <p>The result is a screenshot layout that looks like you spent time on it鈥攅ven though you didn't. Clean, balanced, and ready to use.</p>
 
             <div class="cta-section">
                 <h2>Ready to create a clean layout?</h2>
@@ -172,7 +180,7 @@
                 <span class="material-icons-round" style="color: #007AFF; font-size: 1.25rem;">dashboard_customize</span>
                 <span style="font-weight: 600; font-size: 0.875rem;">PictriKit</span>
             </div>
-            <div style="color: #6b7280; font-size: 0.8125rem;">© 2026 PictriKit</div>
+            <div style="color: #6b7280; font-size: 0.8125rem;">漏 2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
