--- a/index.html
+++ b/index.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en"><head>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F3GLBLC9JW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-F3GLBLC9JW', { send_page_view: true });
+</script>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>PictriKit - Free Screenshot Layout Tool | Combine Screenshots Online</title>
@@ -426,7 +434,7 @@
 <div class="container">
 <div class="hero-badge">
 <span class="dot"></span>
-5 Layout Modes · Instant Export
+5 Layout Modes 路 Instant Export
 </div>
 <h1>
 Screenshot Layouts<br/>
@@ -479,7 +487,7 @@ Open Web Editor
 <span class="material-icons-round">grid_view</span>
 </div>
 <h3>Grid Layout</h3>
-<p>Arrange images in 2×2, 2×3, or 3×3 grids. Ideal for galleries and multi-feature presentations.</p>
+<p>Arrange images in 2脳2, 2脳3, or 3脳3 grids. Ideal for galleries and multi-feature presentations.</p>
 </div>
 <div class="card">
 <div class="card-icon">
@@ -705,7 +713,7 @@ Open Web Editor
 <span class="font-bold text-xl">PictriKit</span>
 </div>
 <div style="color: #9ca3af; font-size: 0.875rem;">
-© 2026 PictriKit. All rights reserved.
+漏 2026 PictriKit. All rights reserved.
 </div>
 <div class="flex gap-6" style="font-size: 0.875rem;">
 <a href="/privacy.html">Privacy Policy</a>
