--- a/privacy.html
+++ b/privacy.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F3GLBLC9JW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-F3GLBLC9JW', { send_page_view: true });
+</script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy - PictriKit</title>
@@ -25,7 +33,7 @@
 </head>
 <body>
   <header>
-    <a href="/">← Back to PictriKit</a>
+    <a href="/">鈫?Back to PictriKit</a>
   </header>
   <div class="container">
     <div class="content">
