--- a/tutorials.html
+++ b/tutorials.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F3GLBLC9JW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-F3GLBLC9JW', { send_page_view: true });
+</script>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Tutorials - Learn How to Use PictriKit | Screenshot Layout Guide</title>
@@ -224,8 +232,8 @@
                         <h3>Getting Started with PictriKit</h3>
                         <p>Open the editor, choose a layout from the left sidebar, click on image slots to add your screenshots, then export. That's it!</p>
                         <div class="tutorial-meta">
-                            <span>⏱ 2 min</span>
-                            <span>📚 Beginner</span>
+                            <span>鈴?2 min</span>
+                            <span>馃摎 Beginner</span>
                         </div>
                     </div>
                 </a>
@@ -235,10 +243,10 @@
                     </div>
                     <div class="tutorial-info">
                         <h3>Using Grid Layouts</h3>
-                        <p>Select Grid from the sidebar, choose 2×2, 2×3, or 3×3 arrangement, add your images, and adjust spacing with the Style panel.</p>
+                        <p>Select Grid from the sidebar, choose 2脳2, 2脳3, or 3脳3 arrangement, add your images, and adjust spacing with the Style panel.</p>
                         <div class="tutorial-meta">
-                            <span>⏱ 3 min</span>
-                            <span>📚 Beginner</span>
+                            <span>鈴?3 min</span>
+                            <span>馃摎 Beginner</span>
                         </div>
                     </div>
                 </a>
@@ -250,8 +258,8 @@
                         <h3>Adding Device Frames</h3>
                         <p>Click Frames in the sidebar, choose Browser, Phone, or Tablet frame, add your screenshot, and export a professional mockup.</p>
                         <div class="tutorial-meta">
-                            <span>⏱ 2 min</span>
-                            <span>📚 Beginner</span>
+                            <span>鈴?2 min</span>
+                            <span>馃摎 Beginner</span>
                         </div>
                     </div>
                 </a>
@@ -263,8 +271,8 @@
                         <h3>Creating Comparisons</h3>
                         <p>Use Compare layouts for before/after views. Add two or more screenshots, and the tool automatically aligns them for easy comparison.</p>
                         <div class="tutorial-meta">
-                            <span>⏱ 2 min</span>
-                            <span>📚 Beginner</span>
+                            <span>鈴?2 min</span>
+                            <span>馃摎 Beginner</span>
                         </div>
                     </div>
                 </a>
@@ -287,7 +295,7 @@
                 <span class="material-icons-round" style="color: #007AFF;">dashboard_customize</span>
                 <span style="font-weight: 700;">PictriKit</span>
             </div>
-            <div style="color: #9ca3af; font-size: 0.875rem;">© 2026 PictriKit. All rights reserved.</div>
+            <div style="color: #9ca3af; font-size: 0.875rem;">漏 2026 PictriKit. All rights reserved.</div>
             <div style="display: flex; gap: 1.5rem; font-size: 0.875rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
