--- a/align-screenshots-centered.html
+++ b/align-screenshots-centered.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F3GLBLC9JW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-F3GLBLC9JW', { send_page_view: true });
+</script>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Align Screenshots Centered – Automatic Centering Tool</title>
+    <title>Align Screenshots Centered 鈥?Automatic Centering Tool</title>
     <meta name="description" content="Align screenshots centered automatically. No manual positioning needed. Every image stays perfectly centered in its space.">
     <link rel="canonical" href="https://www.pictrikit.com/align-screenshots-centered.html">
     
@@ -53,7 +61,7 @@
         .content h2 { font-size: 1.375rem; font-weight: 600; color: #111827; margin: 2.5rem 0 1rem; }
         .content ul { margin: 1rem 0 1.5rem 0; padding-left: 0; list-style: none; }
         .content ul li { padding: 0.5rem 0; padding-left: 1.5rem; position: relative; color: #475569; }
-        .content ul li::before { content: "–"; position: absolute; left: 0; color: #007AFF; }
+        .content ul li::before { content: "鈥?; position: absolute; left: 0; color: #007AFF; }
         .content ol { margin: 1rem 0 1.5rem 1.25rem; }
         .content ol li { padding: 0.375rem 0; color: #475569; }
         .example-image { margin: 2rem 0; border-radius: 0.75rem; overflow: hidden; box-shadow: 0 4px 20px rgba(0,0,0,0.08); border: 1px solid #e2e8f0; }
@@ -126,7 +134,7 @@
             <p>Most tools let you drag images around freely, which sounds flexible but creates problems. You nudge an image left, then right, then left again. You zoom in to check if it's really centered. You use alignment guides that sometimes help and sometimes don't. For something so basic, it takes too much effort.</p>
 
             <h2>Automatic centering that just works</h2>
-            <p>This tool centers every screenshot automatically. When you place an image into a layout slot, it's centered by default—both horizontally and vertically. You don't drag, you don't nudge, you don't guess. The image goes where it belongs, and it stays there.</p>
+            <p>This tool centers every screenshot automatically. When you place an image into a layout slot, it's centered by default鈥攂oth horizontally and vertically. You don't drag, you don't nudge, you don't guess. The image goes where it belongs, and it stays there.</p>
 
             <h2>What you can do</h2>
             <p>With automatic centering, you can:</p>
@@ -172,7 +180,7 @@
                 <span class="material-icons-round" style="color: #007AFF; font-size: 1.25rem;">dashboard_customize</span>
                 <span style="font-weight: 600; font-size: 0.875rem;">PictriKit</span>
             </div>
-            <div style="color: #6b7280; font-size: 0.8125rem;">© 2026 PictriKit</div>
+            <div style="color: #6b7280; font-size: 0.8125rem;">漏 2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
