--- a/app.html
+++ b/app.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html class="light" lang="en">
 <head>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F3GLBLC9JW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-F3GLBLC9JW', { send_page_view: true });
+</script>
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
   <title>PictriKit - Screenshot Layout Tool</title>
@@ -718,19 +726,19 @@
         <div style="display:grid;grid-template-columns:1fr 1fr;gap:8px;">
           <button data-layout-type="grid-2x2" class="layout-card" style="aspect-ratio:4/3;border-radius:10px;background:var(--bg-card);border:1px solid #3d3d3d;cursor:pointer;display:flex;flex-direction:column;align-items:center;justify-content:center;gap:8px;padding:12px;">
             <div style="display:grid;grid-template-columns:1fr 1fr;gap:3px;width:75%;height:50%;"><div style="background:linear-gradient(135deg, #3b82f6 0%, #60a5fa 100%);border-radius:4px;"></div><div style="background:linear-gradient(135deg, #10b981 0%, #34d399 100%);border-radius:4px;"></div><div style="background:linear-gradient(135deg, #f59e0b 0%, #fbbf24 100%);border-radius:4px;"></div><div style="background:linear-gradient(135deg, #8b5cf6 0%, #a78bfa 100%);border-radius:4px;"></div></div>
-            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">2×2 Grid</span>
+            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">2脳2 Grid</span>
           </button>
           <button data-layout-type="grid-1x3" class="layout-card" style="aspect-ratio:4/3;border-radius:10px;background:var(--bg-card);border:1px solid #3d3d3d;cursor:pointer;display:flex;flex-direction:column;align-items:center;justify-content:center;gap:8px;padding:12px;">
             <div style="display:grid;grid-template-columns:1fr 1fr 1fr;gap:3px;width:90%;height:35%;"><div style="background:linear-gradient(135deg, #3b82f6 0%, #60a5fa 100%);border-radius:4px;"></div><div style="background:linear-gradient(135deg, #10b981 0%, #34d399 100%);border-radius:4px;"></div><div style="background:linear-gradient(135deg, #f59e0b 0%, #fbbf24 100%);border-radius:4px;"></div></div>
-            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">1×3 Grid</span>
+            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">1脳3 Grid</span>
           </button>
           <button data-layout-type="grid-2x3" class="layout-card" style="aspect-ratio:4/3;border-radius:10px;background:var(--bg-card);border:1px solid #3d3d3d;cursor:pointer;display:flex;flex-direction:column;align-items:center;justify-content:center;gap:8px;padding:12px;">
             <div style="display:grid;grid-template-columns:1fr 1fr 1fr;grid-template-rows:1fr 1fr;gap:3px;width:90%;height:50%;"><div style="background:linear-gradient(135deg, #3b82f6 0%, #60a5fa 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #10b981 0%, #34d399 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #f59e0b 0%, #fbbf24 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #8b5cf6 0%, #a78bfa 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #ec4899 0%, #f472b6 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #06b6d4 0%, #22d3ee 100%);border-radius:3px;"></div></div>
-            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">2×3 Grid</span>
+            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">2脳3 Grid</span>
           </button>
           <button data-layout-type="grid-3x3" class="layout-card" style="aspect-ratio:4/3;border-radius:10px;background:var(--bg-card);border:1px solid #3d3d3d;cursor:pointer;display:flex;flex-direction:column;align-items:center;justify-content:center;gap:8px;padding:12px;">
             <div style="display:grid;grid-template-columns:1fr 1fr 1fr;gap:2px;width:75%;height:50%;"><div style="background:linear-gradient(135deg, #3b82f6 0%, #60a5fa 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #10b981 0%, #34d399 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #f59e0b 0%, #fbbf24 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #8b5cf6 0%, #a78bfa 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #ec4899 0%, #f472b6 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #06b6d4 0%, #22d3ee 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #ef4444 0%, #f87171 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #6366f1 0%, #818cf8 100%);border-radius:3px;"></div><div style="background:linear-gradient(135deg, #84cc16 0%, #a3e635 100%);border-radius:3px;"></div></div>
-            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">3×3 Grid</span>
+            <span style="font-size:11px;font-weight:600;color:var(--text-primary);">3脳3 Grid</span>
           </button>
         </div>
       </div>
@@ -961,11 +969,11 @@
 <!-- Footer -->
 <footer style="position:fixed;bottom:0;left:0;right:0;height:32px;background:var(--bg-primary);backdrop-filter:blur(10px);border-top:1px solid var(--border-color);display:flex;align-items:center;justify-content:center;gap:16px;font-size:11px;color:var(--text-muted);z-index:50;">
   <span style="display:flex;align-items:center;gap:4px;"><span class="material-symbols-outlined" style="font-size:12px;color:#10b981;">lock</span> Images stay on your device</span>
-  <span>·</span>
-  <span>© 2026 PictriKit</span>
-  <span>·</span>
+  <span>路</span>
+  <span>漏 2026 PictriKit</span>
+  <span>路</span>
   <a href="/privacy.html" style="color:var(--text-muted);text-decoration:none;">Privacy</a>
-  <span>·</span>
+  <span>路</span>
   <a href="/terms.html" style="color:var(--text-muted);text-decoration:none;">Terms</a>
 </footer>
 
