--- a/changelog.html
+++ b/changelog.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F3GLBLC9JW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-F3GLBLC9JW', { send_page_view: true });
+</script>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
     <title>Changelog - PictriKit Updates and New Features</title>
@@ -65,7 +73,7 @@
         .changelog-item h3 { font-size: 1.25rem; font-weight: 600; color: #111827; margin-bottom: 1rem; }
         .changelog-item ul { list-style: none; }
         .changelog-item li { padding: 0.5rem 0; padding-left: 1.5rem; position: relative; color: #4b5563; font-size: 0.9375rem; }
-        .changelog-item li::before { content: "•"; position: absolute; left: 0; color: #007AFF; font-weight: bold; }
+        .changelog-item li::before { content: "鈥?; position: absolute; left: 0; color: #007AFF; font-weight: bold; }
         .tag { display: inline-block; padding: 0.125rem 0.5rem; border-radius: 0.25rem; font-size: 0.75rem; font-weight: 500; margin-right: 0.5rem; }
         .tag-new { background: #dbeafe; color: #1d4ed8; }
         .tag-improved { background: #d1fae5; color: #047857; }
@@ -212,7 +220,7 @@
                 <span class="material-icons-round" style="color: #007AFF;">dashboard_customize</span>
                 <span style="font-weight: 700;">PictriKit</span>
             </div>
-            <div style="color: #9ca3af; font-size: 0.875rem;">© 2026 PictriKit. All rights reserved.</div>
+            <div style="color: #9ca3af; font-size: 0.875rem;">漏 2026 PictriKit. All rights reserved.</div>
             <div style="display: flex; gap: 1.5rem; font-size: 0.875rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
