--- a/compare-screenshots.html
+++ b/compare-screenshots.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F3GLBLC9JW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-F3GLBLC9JW', { send_page_view: true });
+</script>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Compare Screenshots Side by Side Online – Clean Layout Tool</title>
+    <title>Compare Screenshots Side by Side Online 鈥?Clean Layout Tool</title>
     <meta name="description" content="Compare screenshots side by side in a clean layout. Arrange multiple screenshots for UI comparison, before-and-after views, or sharing. No design skills required.">
     <link rel="canonical" href="https://www.pictrikit.com/compare-screenshots.html">
     
@@ -65,7 +73,7 @@
         .content h2 { font-size: 1.375rem; font-weight: 600; color: #111827; margin: 2.5rem 0 1rem; }
         .content ul { margin: 1rem 0 1.5rem 0; padding-left: 0; list-style: none; }
         .content ul li { padding: 0.5rem 0; padding-left: 1.5rem; position: relative; color: #475569; }
-        .content ul li::before { content: "–"; position: absolute; left: 0; color: #007AFF; }
+        .content ul li::before { content: "鈥?; position: absolute; left: 0; color: #007AFF; }
         .content ol { margin: 1rem 0 1.5rem 1.25rem; }
         .content ol li { padding: 0.375rem 0; color: #475569; }
         
@@ -199,7 +207,7 @@
                 <span class="material-icons-round" style="color: #007AFF; font-size: 1.25rem;">dashboard_customize</span>
                 <span style="font-weight: 600; font-size: 0.875rem;">PictriKit</span>
             </div>
-            <div style="color: #6b7280; font-size: 0.8125rem;">© 2026 PictriKit</div>
+            <div style="color: #6b7280; font-size: 0.8125rem;">漏 2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
