--- a/compare-ui-screenshots.html
+++ b/compare-ui-screenshots.html
@@ -1,9 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-F3GLBLC9JW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-F3GLBLC9JW', { send_page_view: true });
+</script>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Compare App UI Screenshots – Side by Side Interface Comparison</title>
+    <title>Compare App UI Screenshots 鈥?Side by Side Interface Comparison</title>
     <meta name="description" content="Compare app UI screenshots side by side. Show interface differences, design iterations, or version changes with clean comparison layouts.">
     <link rel="canonical" href="https://www.pictrikit.com/compare-ui-screenshots.html">
     
@@ -53,7 +61,7 @@
         .content h2 { font-size: 1.375rem; font-weight: 600; color: #111827; margin: 2.5rem 0 1rem; }
         .content ul { margin: 1rem 0 1.5rem 0; padding-left: 0; list-style: none; }
         .content ul li { padding: 0.5rem 0; padding-left: 1.5rem; position: relative; color: #475569; }
-        .content ul li::before { content: "–"; position: absolute; left: 0; color: #007AFF; }
+        .content ul li::before { content: "鈥?; position: absolute; left: 0; color: #007AFF; }
         .content ol { margin: 1rem 0 1.5rem 1.25rem; }
         .content ol li { padding: 0.375rem 0; color: #475569; }
         .example-image { margin: 2rem 0; border-radius: 0.75rem; overflow: hidden; box-shadow: 0 4px 20px rgba(0,0,0,0.08); border: 1px solid #e2e8f0; }
@@ -122,7 +130,7 @@
             </div>
 
             <h2>Why UI comparison matters</h2>
-            <p>Interface design is about details. A button moved slightly, a color changed, a layout adjusted—these differences are hard to spot when you're looking at screenshots separately. Placing them side by side lets you see exactly what changed and whether the change works. It's essential for design reviews, stakeholder presentations, and documentation.</p>
+            <p>Interface design is about details. A button moved slightly, a color changed, a layout adjusted鈥攖hese differences are hard to spot when you're looking at screenshots separately. Placing them side by side lets you see exactly what changed and whether the change works. It's essential for design reviews, stakeholder presentations, and documentation.</p>
 
             <h2>The problem with ad-hoc comparisons</h2>
             <p>Opening two screenshots in separate windows and switching between them doesn't give you a true comparison. Pasting them into a slide deck often results in mismatched sizes and awkward spacing. You end up spending time on layout instead of focusing on the actual UI differences you're trying to evaluate.</p>
@@ -174,7 +182,7 @@
                 <span class="material-icons-round" style="color: #007AFF; font-size: 1.25rem;">dashboard_customize</span>
                 <span style="font-weight: 600; font-size: 0.875rem;">PictriKit</span>
             </div>
-            <div style="color: #6b7280; font-size: 0.8125rem;">© 2026 PictriKit</div>
+            <div style="color: #6b7280; font-size: 0.8125rem;">漏 2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
