feat: SEO improvements - JSON-LD schema, security.txt, humans.txt, updated sitemap, security headers, robots.txt

--- a/404.html
+++ b/404.html
@@ -11,6 +11,7 @@
 </script>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="noindex, nofollow">
   <title>404 - Page Not Found | PictriKit</title>
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <style>
