--- a/index.html
+++ b/index.html
@@ -26,6 +26,32 @@
 <meta name="twitter:title" content="PictriKit - Free Screenshot Layout Tool">
 <meta name="twitter:description" content="Create beautiful screenshot layouts in seconds. Free, no registration required.">
 <meta name="twitter:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
+<!-- Structured Data (JSON-LD) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebApplication",
+  "name": "PictriKit",
+  "url": "https://www.pictrikit.com",
+  "description": "Free online screenshot layout tool. Create beautiful image compositions with Linear, Focus, Grid, Compare, and Device Frame layouts.",
+  "applicationCategory": "DesignApplication",
+  "operatingSystem": "Any",
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "4.8",
+    "ratingCount": "150"
+  },
+  "author": {
+    "@type": "Organization",
+    "name": "PictriKit"
+  }
+}
+</script>
 <!-- Favicon -->
 <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="/assets/images/icon-180.svg">
