feat: complete SEO enhancement - JSON-LD for all tool pages, og:image and twitter:image for all pages

--- a/feedback.html
+++ b/feedback.html
@@ -18,6 +18,12 @@
   <meta property="og:description" content="Community feedback and official responses from PictriKit. Share your thoughts and see our replies.">
   <meta property="og:url" content="https://www.pictrikit.com/feedback.html">
   <meta property="og:type" content="website">
+  <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
+  <meta property="og:site_name" content="PictriKit">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="User Feedback & Official Responses - PictriKit">
+  <meta name="twitter:description" content="Community feedback and official responses from PictriKit.">
+  <meta name="twitter:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
