--- a/tutorials.html
+++ b/tutorials.html
@@ -19,6 +19,12 @@
     <meta property="og:description" content="Step-by-step tutorials for creating beautiful screenshot layouts.">
     <meta property="og:url" content="https://www.pictrikit.com/tutorials.html">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
+    <meta property="og:site_name" content="PictriKit">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Tutorials - Learn How to Use PictriKit">
+    <meta name="twitter:description" content="Step-by-step tutorials for creating beautiful screenshot layouts.">
+    <meta name="twitter:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <!-- Favicon -->
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
