--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,12 @@
     <meta property="og:description" content="Get in touch with the PictriKit team.">
     <meta property="og:url" content="https://www.pictrikit.com/contact.html">
     <meta property="og:type" content="website">
+    <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
+    <meta property="og:site_name" content="PictriKit">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Contact Us - PictriKit Support">
+    <meta name="twitter:description" content="Get in touch with the PictriKit team.">
+    <meta name="twitter:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
     <!-- Favicon -->
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
