refactor: simplify creator message, start with design principles

--- a/feedback.html
+++ b/feedback.html
@@ -174,10 +174,6 @@
           </div>
         </header>
         <div class="creator-pinned-content">
-          <p>I'm a heavy user of screenshot stitching tools. In my daily work, I often need to combine multiple screenshots for documentation and printing.</p>
-          <p>Most online tools I tried had problems: they required sign-ups, were overly complex, produced messy results, or even forced payment just to export a usable image.</p>
-          <p>That frustration led me to build PictriKit.</p>
-          <p>After several technical attempts, I chose a layout-based approach to image stitching. In my experience, this is the most reliable way to combine screenshots cleanly. It preserves image resolution and avoids distortion — unless the images are extremely large and the system has to compromise.</p>
           <p>PictriKit is designed to be:</p>
           <ul>
             <li>Simple</li>
@@ -187,6 +183,7 @@
             <li>No learning curve</li>
           </ul>
           <p>If you open it, you already know how to use it.</p>
+          <p>I built this because most screenshot tools I tried were either too complex, required sign-ups, or produced messy results. PictriKit uses a layout-based approach — in my experience, the most reliable way to combine screenshots cleanly while preserving resolution.</p>
           <p>This is a new project, so bugs and edge cases may still exist. That's why this feedback page exists. If you encounter any issues, have ideas, or think something can be improved, please leave a message. I read and reply to feedback and fix problems as they come.</p>
           <p>If PictriKit is useful to you, sharing it with others would mean a lot. Your feedback and shares are what keep this project moving forward.</p>
           <p>Thank you for being here <span class="creator-pinned-heart">❤️</span></p>
