--- a/app.html
+++ b/app.html
@@ -551,7 +551,7 @@
       <span class="material-symbols-outlined" style="font-size:20px;">dark_mode</span>
     </button>
     <!-- Feedback Button - highlighted with warm yellow -->
-    <a href="/feedback.html" id="feedback-btn" style="height:32px;padding:0 12px;border-radius:6px;border:1px solid #fde047;background:linear-gradient(135deg, #fefce8 0%, #fef9c3 100%);cursor:pointer;display:flex;align-items:center;gap:5px;font-size:13px;font-weight:500;color:#92400e;text-decoration:none;box-shadow:0 1px 2px rgba(251,191,36,0.1);" title="Send feedback">
+    <a href="/feedback.html" id="feedback-btn" style="height:32px;padding:0 12px;border-radius:6px;border:1px solid #fde047;background:linear-gradient(135deg, #fefce8 0%, #fef9c3 100%);cursor:pointer;display:flex;align-items:center;gap:5px;font-size:13px;font-weight:500;color:#92400e;text-decoration:none;box-shadow:0 1px 2px rgba(251,191,36,0.1);" title="Send feedback"></a>
       <span class="material-symbols-outlined" style="font-size:15px;">feedback</span>
       <span>Feedback</span>
     </a>
@@ -969,11 +969,11 @@
 <!-- Footer -->
 <footer style="position:fixed;bottom:0;left:0;right:0;height:32px;background:var(--bg-primary);backdrop-filter:blur(10px);border-top:1px solid var(--border-color);display:flex;align-items:center;justify-content:center;gap:16px;font-size:11px;color:var(--text-muted);z-index:50;">
   <span style="display:flex;align-items:center;gap:4px;"><span class="material-symbols-outlined" style="font-size:12px;color:#10b981;">lock</span> Images stay on your device</span>
-  <span>路</span>
-  <span>漏 2026 PictriKit</span>
-  <span>路</span>
+  <span>&middot;</span>
+  <span>&copy; 2026 PictriKit</span>
+  <span>&middot;</span>
   <a href="/privacy.html" style="color:var(--text-muted);text-decoration:none;">Privacy</a>
-  <span>路</span>
+  <span>&middot;</span>
   <a href="/terms.html" style="color:var(--text-muted);text-decoration:none;">Terms</a>
 </footer>
 
