fix: feedback button HTML structure - remove duplicate closing tag

--- a/app.html
+++ b/app.html
@@ -551,7 +551,7 @@
       <span class="material-symbols-outlined" style="font-size:20px;">dark_mode</span>
     </button>
     <!-- Feedback Button - highlighted with warm yellow -->
-    <a href="/feedback.html" id="feedback-btn" style="height:32px;padding:0 12px;border-radius:6px;border:1px solid #fde047;background:linear-gradient(135deg, #fefce8 0%, #fef9c3 100%);cursor:pointer;display:flex;align-items:center;gap:5px;font-size:13px;font-weight:500;color:#92400e;text-decoration:none;box-shadow:0 1px 2px rgba(251,191,36,0.1);" title="Send feedback"></a>
+    <a href="/feedback.html" id="feedback-btn" style="height:32px;padding:0 12px;border-radius:6px;border:1px solid #fde047;background:linear-gradient(135deg, #fefce8 0%, #fef9c3 100%);cursor:pointer;display:flex;align-items:center;gap:5px;font-size:13px;font-weight:500;color:#92400e;text-decoration:none;box-shadow:0 1px 2px rgba(251,191,36,0.1);" title="Send feedback">
       <span class="material-symbols-outlined" style="font-size:15px;">feedback</span>
       <span>Feedback</span>
     </a>
