feat: optimize internal linking - add popular tools to homepage, cross-links between tool pages, footer tool links

--- a/compare-screenshots.html
+++ b/compare-screenshots.html
@@ -11,7 +11,7 @@
 </script>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>Compare Screenshots Side by Side Online 閳?Clean Layout Tool</title>
+    <title>Compare Screenshots Side by Side Online 闂?Clean Layout Tool</title>
     <meta name="description" content="Compare screenshots side by side in a clean layout. Arrange multiple screenshots for UI comparison, before-and-after views, or sharing. No design skills required.">
     <link rel="canonical" href="https://www.pictrikit.com/compare-screenshots.html">
     
@@ -83,7 +83,7 @@
         .content h2 { font-size: 1.375rem; font-weight: 600; color: #111827; margin: 2.5rem 0 1rem; }
         .content ul { margin: 1rem 0 1.5rem 0; padding-left: 0; list-style: none; }
         .content ul li { padding: 0.5rem 0; padding-left: 1.5rem; position: relative; color: #475569; }
-        .content ul li::before { content: "閳?; position: absolute; left: 0; color: #007AFF; }
+        .content ul li::before { content: "闂?; position: absolute; left: 0; color: #007AFF; }
         .content ol { margin: 1rem 0 1.5rem 1.25rem; }
         .content ol li { padding: 0.375rem 0; color: #475569; }
         
@@ -209,15 +209,59 @@
                 </a>
             </div>
         </div>
-    </div>
 
+    <!-- Try Other Tools Section -->
+    <section class="other-tools" style="margin-top:3rem;padding:2rem 0;background:#f9fafb;border-radius:12px;">
+      <div class="container" style="max-width:800px;margin:0 auto;padding:0 1rem;">
+        <h3 style="text-align:center;margin-bottom:1.5rem;color:#1f2937;font-size:1.25rem;">Try Other Tools</h3>
+        <div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(200px,1fr));gap:1rem;">
+          <a href="/compare-screenshots.html" style="text-decoration:none;">
+            <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
+              <h4 style="margin:0 0 0.5rem;font-size:0.9rem;color:#1f2937;">Compare Screenshots</h4>
+              <p style="margin:0;font-size:0.8rem;color:#6b7280;">Side-by-side comparison</p>
+            </div>
+          </a>
+          <a href="/before-after-screenshot.html" style="text-decoration:none;">
+            <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
+              <h4 style="margin:0 0 0.5rem;font-size:0.9rem;color:#1f2937;">Before &amp; After</h4>
+              <p style="margin:0;font-size:0.8rem;color:#6b7280;">Show changes clearly</p>
+            </div>
+          </a>
+          <a href="/put-two-screenshots-together.html" style="text-decoration:none;">
+            <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
+              <h4 style="margin:0 0 0.5rem;font-size:0.9rem;color:#1f2937;">Put Two Together</h4>
+              <p style="margin:0;font-size:0.8rem;color:#6b7280;">Simple side-by-side</p>
+            </div>
+          </a>
+          <a href="/stack-screenshots-vertically.html" style="text-decoration:none;">
+            <div style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1rem;transition:all 0.2s;">
+              <h4 style="margin:0 0 0.5rem;font-size:0.9rem;color:#1f2937;">Stack Vertically</h4>
+              <p style="margin:0;font-size:0.8rem;color:#6b7280;">Create long sequences</p>
+            </div>
+          </a>
+        </div>
+        <div style="text-align:center;margin-top:1.5rem;">
+          <a href="/" style="color:#007AFF;text-decoration:none;font-size:0.9rem;">Back to All Tools</a>
+        </div>
+      </div>
+    </section>
     <footer>
         <div class="footer-container">
             <div style="display: flex; align-items: center; gap: 0.5rem;">
                 <span class="material-icons-round" style="color: #007AFF; font-size: 1.25rem;">dashboard_customize</span>
                 <span style="font-weight: 600; font-size: 0.875rem;">PictriKit</span>
             </div>
-            <div style="color: #6b7280; font-size: 0.8125rem;">婕?2026 PictriKit</div>
+                        <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid #e5e7eb;">
+                <div style="font-size: 0.75rem; color: #6b7280; margin-bottom: 0.5rem;">Popular Tools:</div>
+                <div style="display: flex; flex-wrap: wrap; gap: 0.75rem; font-size: 0.75rem;">
+                    <a href="/compare-screenshots.html" style="color: #6b7280; text-decoration: none;">Compare Screenshots</a>
+                    <a href="/combine-chat-screenshots.html" style="color: #6b7280; text-decoration: none;">Combine Chat</a>
+                    <a href="/before-after-screenshot.html" style="color: #6b7280; text-decoration: none;">Before &amp; After</a>
+                    <a href="/put-two-screenshots-together.html" style="color: #6b7280; text-decoration: none;">Put Two Together</a>
+                    <a href="/stack-screenshots-vertically.html" style="color: #6b7280; text-decoration: none;">Stack Vertically</a>
+                    <a href="/screenshot-grid-layout.html" style="color: #6b7280; text-decoration: none;">Grid Layout</a>
+                </div>
+            </div><div style="color: #6b7280; font-size: 0.8125rem;">婵?2026 PictriKit</div>
             <div style="display: flex; gap: 1.5rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
