--- a/index.html
+++ b/index.html
@@ -538,6 +538,50 @@ Open Web Editor
 </div>
 </div>
 </div>
+
+<!-- Popular Tools Section -->
+<div class="popular-tools" style="margin-top:3rem;">
+<h3 style="text-align:center;margin-bottom:2rem;color:#1f2937;">Popular Tools</h3>
+<div class="tools-grid" style="display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:1rem;">
+<a href="/compare-screenshots.html" class="tool-link" style="text-decoration:none;color:inherit;">
+<div class="tool-card" style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1.25rem;transition:all 0.2s;">
+<h4 style="margin:0 0 0.5rem;font-size:1rem;font-weight:600;color:#1f2937;">Compare Screenshots</h4>
+<p style="margin:0;font-size:0.875rem;color:#6b7280;">Side-by-side comparison layouts</p>
+</div>
+</a>
+<a href="/combine-chat-screenshots.html" class="tool-link" style="text-decoration:none;color:inherit;">
+<div class="tool-card" style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1.25rem;transition:all 0.2s;">
+<h4 style="margin:0 0 0.5rem;font-size:1rem;font-weight:600;color:#1f2937;">Combine Chat Screenshots</h4>
+<p style="margin:0;font-size:0.875rem;color:#6b7280;">Stack conversations vertically</p>
+</div>
+</a>
+<a href="/put-two-screenshots-together.html" class="tool-link" style="text-decoration:none;color:inherit;">
+<div class="tool-card" style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1.25rem;transition:all 0.2s;">
+<h4 style="margin:0 0 0.5rem;font-size:1rem;font-weight:600;color:#1f2937;">Put Two Screenshots Together</h4>
+<p style="margin:0;font-size:0.875rem;color:#6b7280;">Simple side-by-side layouts</p>
+</div>
+</a>
+<a href="/before-after-screenshot.html" class="tool-link" style="text-decoration:none;color:inherit;">
+<div class="tool-card" style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1.25rem;transition:all 0.2s;">
+<h4 style="margin:0 0 0.5rem;font-size:1rem;font-weight:600;color:#1f2937;">Before &amp; After Comparison</h4>
+<p style="margin:0;font-size:0.875rem;color:#6b7280;">Show changes clearly</p>
+</div>
+</a>
+<a href="/stack-screenshots-vertically.html" class="tool-link" style="text-decoration:none;color:inherit;">
+<div class="tool-card" style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1.25rem;transition:all 0.2s;">
+<h4 style="margin:0 0 0.5rem;font-size:1rem;font-weight:600;color:#1f2937;">Stack Screenshots Vertically</h4>
+<p style="margin:0;font-size:0.875rem;color:#6b7280;">Create long image sequences</p>
+</div>
+</a>
+<a href="/screenshot-grid-layout.html" class="tool-link" style="text-decoration:none;color:inherit;">
+<div class="tool-card" style="background:white;border:1px solid #e5e7eb;border-radius:8px;padding:1.25rem;transition:all 0.2s;">
+<h4 style="margin:0 0 0.5rem;font-size:1rem;font-weight:600;color:#1f2937;">Grid Layout</h4>
+<p style="margin:0;font-size:0.875rem;color:#6b7280;">Organize in rows and columns</p>
+</div>
+</a>
+</div>
+</div>
+</div>
 </section>
 
 <section class="section-gray py-24" id="how-it-works">
