feat: add JSON-LD structured data to all pages for better Google Search Console indexing

--- a/templates.html
+++ b/templates.html
@@ -25,6 +25,18 @@
     <meta name="twitter:title" content="Templates - Screenshot Layout Examples">
     <meta name="twitter:description" content="Browse screenshot layout templates and examples for your projects.">
     <meta name="twitter:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
+    
+    <!-- JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "CollectionPage",
+      "name": "PictriKit Templates",
+      "url": "https://www.pictrikit.com/templates.html",
+      "description": "Pre-made screenshot layout templates for common use cases"
+    }
+    </script>
+
     <!-- Favicon -->
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
@@ -193,7 +205,7 @@
                         </div>
                     </div>
                     <div class="template-info">
-                        <h3>2脳2 Grid</h3>
+                        <h3>2閼? Grid</h3>
                         <span>4 images in grid</span>
                     </div>
                 </a>
@@ -232,7 +244,7 @@
                 <span class="material-icons-round" style="color: #007AFF;">dashboard_customize</span>
                 <span style="font-weight: 700;">PictriKit</span>
             </div>
-            <div style="color: #9ca3af; font-size: 0.875rem;">漏 2026 PictriKit. All rights reserved.</div>
+            <div style="color: #9ca3af; font-size: 0.875rem;">濠?2026 PictriKit. All rights reserved.</div>
             <div style="display: flex; gap: 1.5rem; font-size: 0.875rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
