--- a/terms.html
+++ b/terms.html
@@ -20,6 +20,18 @@
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
   <meta name="twitter:card" content="summary">
+  
+  <!-- JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebPage",
+    "name": "Terms of Service",
+    "url": "https://www.pictrikit.com/terms.html",
+    "description": "Terms of service for PictriKit"
+  }
+  </script>
+  
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -39,7 +51,7 @@
 </head>
 <body>
   <header>
-    <a href="/">鈫?Back to PictriKit</a>
+    <a href="/">闁?Back to PictriKit</a>
   </header>
   <div class="container">
     <div class="content">
