--- a/app.html
+++ b/app.html
@@ -30,6 +30,30 @@
   <meta name="twitter:description" content="Free online screenshot layout tool. Create beautiful image compositions.">
   <meta name="twitter:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
   
+  <!-- JSON-LD -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "PictriKit",
+    "url": "https://www.pictrikit.com/app.html",
+    "description": "Free online screenshot layout tool. Create beautiful image compositions with multiple layouts including linear, focus, grid, compare and device frames.",
+    "applicationCategory": "DesignApplication",
+    "operatingSystem": "Any",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "browserRequirements": "Requires JavaScript. Requires HTML5.",
+    "softwareVersion": "1.0",
+    "author": {
+      "@type": "Organization",
+      "name": "PictriKit"
+    }
+  }
+  </script>
+  
   <!-- Favicon -->
   <link rel="icon" href="/favicon.svg" type="image/svg+xml">
   <link rel="icon" href="/favicon.ico" sizes="any">
