--- a/changelog.html
+++ b/changelog.html
@@ -25,6 +25,18 @@
     <meta name="twitter:title" content="Changelog - PictriKit Updates">
     <meta name="twitter:description" content="Track the latest updates and new features in PictriKit.">
     <meta name="twitter:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
+    
+    <!-- JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "PictriKit Changelog",
+      "url": "https://www.pictrikit.com/changelog.html",
+      "description": "Version history and updates for PictriKit"
+    }
+    </script>
+
     <!-- Favicon -->
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
@@ -79,7 +91,7 @@
         .changelog-item h3 { font-size: 1.25rem; font-weight: 600; color: #111827; margin-bottom: 1rem; }
         .changelog-item ul { list-style: none; }
         .changelog-item li { padding: 0.5rem 0; padding-left: 1.5rem; position: relative; color: #4b5563; font-size: 0.9375rem; }
-        .changelog-item li::before { content: "鈥?; position: absolute; left: 0; color: #007AFF; font-weight: bold; }
+        .changelog-item li::before { content: "闁?; position: absolute; left: 0; color: #007AFF; font-weight: bold; }
         .tag { display: inline-block; padding: 0.125rem 0.5rem; border-radius: 0.25rem; font-size: 0.75rem; font-weight: 500; margin-right: 0.5rem; }
         .tag-new { background: #dbeafe; color: #1d4ed8; }
         .tag-improved { background: #d1fae5; color: #047857; }
@@ -226,7 +238,7 @@
                 <span class="material-icons-round" style="color: #007AFF;">dashboard_customize</span>
                 <span style="font-weight: 700;">PictriKit</span>
             </div>
-            <div style="color: #9ca3af; font-size: 0.875rem;">漏 2026 PictriKit. All rights reserved.</div>
+            <div style="color: #9ca3af; font-size: 0.875rem;">濠?2026 PictriKit. All rights reserved.</div>
             <div style="display: flex; gap: 1.5rem; font-size: 0.875rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
