--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,18 @@
     <meta name="twitter:title" content="Contact Us - PictriKit Support">
     <meta name="twitter:description" content="Get in touch with the PictriKit team.">
     <meta name="twitter:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
+    
+    <!-- JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ContactPage",
+      "name": "Contact PictriKit",
+      "url": "https://www.pictrikit.com/contact.html",
+      "description": "Get in touch with the PictriKit team"
+    }
+    </script>
+
     <!-- Favicon -->
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
@@ -214,7 +226,7 @@
                 <span class="material-icons-round" style="color: #007AFF;">dashboard_customize</span>
                 <span style="font-weight: 700;">PictriKit</span>
             </div>
-            <div style="color: #9ca3af; font-size: 0.875rem;">漏 2026 PictriKit. All rights reserved.</div>
+            <div style="color: #9ca3af; font-size: 0.875rem;">婕?2026 PictriKit. All rights reserved.</div>
             <div style="display: flex; gap: 1.5rem; font-size: 0.875rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
