--- a/faq.html
+++ b/faq.html
@@ -25,6 +25,19 @@
     <meta name="twitter:title" content="FAQ - Frequently Asked Questions">
     <meta name="twitter:description" content="Find answers to common questions about PictriKit.">
     <meta name="twitter:image" content="https://www.pictrikit.com/assets/images/og-image.svg">
+    
+    <!-- JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "name": "PictriKit FAQ",
+      "url": "https://www.pictrikit.com/faq.html",
+      "description": "Frequently asked questions about PictriKit screenshot layout tool",
+      "mainEntity": []
+    }
+    </script>
+
     <!-- Favicon -->
     <link rel="icon" href="/favicon.svg" type="image/svg+xml">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet"/>
@@ -212,7 +225,7 @@
                 <span class="material-icons-round" style="color: #007AFF;">dashboard_customize</span>
                 <span style="font-weight: 700;">PictriKit</span>
             </div>
-            <div style="color: #9ca3af; font-size: 0.875rem;">漏 2026 PictriKit. All rights reserved.</div>
+            <div style="color: #9ca3af; font-size: 0.875rem;">婕?2026 PictriKit. All rights reserved.</div>
             <div style="display: flex; gap: 1.5rem; font-size: 0.875rem;">
                 <a href="/privacy.html">Privacy</a>
                 <a href="/terms.html">Terms</a>
